[gd_scene load_steps=3 format=3 uid="uid://ml8il2dvm72e"]

[ext_resource type="Script" path="res://inventory/test_pinventory/Inventory_Slot.gd" id="1_qkdpr"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xlphe"]

[node name="Inventory_Slot" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 3.0
offset_top = 275.0
offset_right = -82.0
offset_bottom = -370.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 4
script = ExtResource("1_qkdpr")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 78.0
grow_horizontal = 2
color = Color(0.539683, 0.554134, 0.579528, 1)

[node name="label_itemName" type="Label" parent="ColorRect"]
layout_mode = 0
offset_left = 25.0
offset_top = 23.0
offset_right = 112.0
offset_bottom = 46.0
text = "Item Name"

[node name="itemName" type="Label" parent="ColorRect"]
layout_mode = 0
offset_left = 141.0
offset_top = 23.0
offset_right = 267.0
offset_bottom = 46.0
text = "Item Name here"

[node name="label_itemType" type="Label" parent="ColorRect"]
layout_mode = 0
offset_left = 385.0
offset_top = 23.0
offset_right = 472.0
offset_bottom = 46.0
text = "Item Type:"

[node name="itemType" type="Label" parent="ColorRect"]
layout_mode = 0
offset_left = 501.0
offset_top = 23.0
offset_right = 627.0
offset_bottom = 46.0
text = "Item Type here"

[node name="label_itemQty" type="Label" parent="ColorRect"]
layout_mode = 0
offset_left = 836.0
offset_top = 23.0
offset_right = 923.0
offset_bottom = 46.0
text = "Quantity:"

[node name="itemQty" type="Label" parent="ColorRect"]
layout_mode = 0
offset_left = 833.0
offset_top = 23.0
offset_right = 959.0
offset_bottom = 46.0
text = "00"
horizontal_alignment = 2

[node name="ItemButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = -2.0
offset_right = 2.0
offset_bottom = -641.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_xlphe")

[node name="DetailsPanel" type="ColorRect" parent="."]
visible = false
layout_mode = 0
offset_top = -378.0
offset_right = 996.0
offset_bottom = -33.0

[node name="ItemName" type="Label" parent="DetailsPanel"]
layout_mode = 0
offset_left = 26.0
offset_top = 22.0
offset_right = 113.0
offset_bottom = 45.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "Item Name"

[node name="ItemBlurb" type="Label" parent="DetailsPanel"]
layout_mode = 0
offset_left = 26.0
offset_top = 79.0
offset_right = 134.0
offset_bottom = 107.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "Item description goes here"

[node name="UsagePanel" type="ColorRect" parent="."]
visible = false
layout_mode = 0
offset_left = 1.0
offset_top = -168.0
offset_right = 203.0
offset_bottom = -5.0

[node name="UseButton" type="Button" parent="UsagePanel"]
layout_mode = 0
offset_left = 11.0
offset_top = 113.0
offset_right = 191.0
offset_bottom = 153.0
text = "Use"

[node name="EquipButton" type="Button" parent="UsagePanel"]
layout_mode = 0
offset_left = 11.0
offset_top = 61.0
offset_right = 191.0
offset_bottom = 101.0
text = "Equip"

[node name="DropButton" type="Button" parent="UsagePanel"]
layout_mode = 0
offset_left = 11.0
offset_top = 11.0
offset_right = 191.0
offset_bottom = 51.0
text = "Drop"

[node name="UsagePanel2" type="ColorRect" parent="."]
visible = false
layout_mode = 0
offset_left = 1.0
offset_top = -111.0
offset_right = 203.0
offset_bottom = -5.0

[node name="Button" type="Button" parent="UsagePanel2"]
layout_mode = 0
offset_left = 11.0
offset_top = 58.0
offset_right = 191.0
offset_bottom = 98.0
text = "Use"

[node name="DropButton" type="Button" parent="UsagePanel2"]
layout_mode = 0
offset_left = 11.0
offset_top = 8.0
offset_right = 191.0
offset_bottom = 48.0
text = "Drop"

[node name="EmptyPanel" type="ColorRect" parent="."]
visible = false
layout_mode = 0
offset_right = 994.0
offset_bottom = 78.0

[node name="label_empty" type="Label" parent="EmptyPanel"]
offset_left = 25.0
offset_top = 23.0
offset_right = 112.0
offset_bottom = 46.0
theme_override_colors/font_color = Color(0.90671, 0.294588, 0.449057, 1)
text = "This is an empty slot :)"

[connection signal="mouse_entered" from="ItemButton" to="." method="_on_item_button_mouse_entered"]
[connection signal="mouse_exited" from="ItemButton" to="." method="_on_item_button_mouse_exited"]
[connection signal="pressed" from="ItemButton" to="." method="_on_item_button_pressed"]
